--- a/style.css
+++ b/style.css
@@ -1,18 +1,34 @@
-
-.calc{
-    
-    
-    width :500px;
-    height: 100px;
+body{
+ color: red;  
 }
-.box{
-    display: flex;
+
+.field{
+    font-size: 50px;
+    text-align: right;
     flex: 1;
-    border-color: red;
-    border-style: dotted;
-    border-radius: 20px;
+    border-style: solid;
+}
+.calc{
+    width: 500px;
+    height: 500px;
+    display: flex;
+    flex-direction: column;
+  gap: 5px;
+ 
+}
+.row{
+    display: flex;
+    justify-content: space-evenly;
+    flex : 1 0;
+}
+button{
+    font-size: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex: 1 1 80%;
 }
 h1{
-    font-size: 100px;
+    
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
