--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body{
 color: blue;
  display: flex;
  flex: 1;
-
+font-size: 20px;
  align-items: center;
  flex-direction: column;
  
@@ -30,14 +30,12 @@ color: blue;
     height: 600px; 
     display: flex;
     flex-direction: column;
-    
-  gap: 5px;
+    gap: 5px;
  
 }
 .row{
-    gap:5px;
+    gap: 10px;
     display: flex;
-    justify-content: space-evenly;
     flex : 1 0;
 }
 button{
@@ -53,4 +51,20 @@ button{
 h1{
     
     font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+.hover{
+    background-color: black;
+}
+.left{
+    display: flex;
+    gap: 10px;
+    flex: 1 0 25%;
+    justify-content: space-evenly;
+
+}
+.right{
+    display: flex;
+    flex: 1 1 0%;
+    gap: 10px;
+    justify-content: space-evenly;
 }
