--- a/style.css
+++ b/style.css
@@ -1,12 +1,12 @@
 body{
     height: 900px;
-color: blue;
- display: flex;
- flex: 1;
-font-size: 20px;
- align-items: center;
- flex-direction: column;
- 
+    color: black;
+    display: flex;
+    flex: 1;
+    font-size: 20px;
+    align-items: center;
+    flex-direction: column;
+    
 }
 
 
@@ -49,7 +49,7 @@ button{
     color: aliceblue;
 }
 h1{
-    
+    color: brown;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 .hover{
